# controle-de-pedidos

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: database.py  main.py  settings.py
src/common/: enum.py
src/common/controller/: base_change_controller.py  base_controller.py  base_crud_controller.py  base_list_controller.py  base_remove_controller.py  base_view_controller.py
src/common/field/: monetary_input.py
src/common/gui/core/: table_model_default.py
src/common/gui/widget/: base_change_widget.py  base_crud_widget.py  base_list_widget.py  base_view_widget.py  base_widget.py
src/common/repository/: base_repository.py  connection.py
src/routes/cidade/: repository.py
src/routes/cidade/add/: controller.py  widget.py
src/routes/cidade/change/: controller.py  widget.py
src/routes/cidade/list/: controller.py  widget.py
src/routes/cidade/remove/: controller.py
src/routes/cliente/: repository.py
src/routes/cliente/add/: controller.py  widget.py
src/routes/cliente/change/: controller.py  widget.py
src/routes/cliente/list/: controller.py  widget.py
src/routes/cliente/remove/: controller.py
src/routes/menu/: controller.py  repository.py  widget.py
src/routes/pedido/: enum.py  repository.py
src/routes/pedido/add/: controller.py  widget.py
src/routes/pedido/change_status/: controller.py  widget.py
src/routes/pedido/list/: controller.py  widget.py
src/routes/pedido/remove/: controller.py
src/routes/pedido/view/: controller.py  widget.py
src/routes/produto/: enum.py  repository.py
(+7 files in other folders)
