[tool.poetry]
name = "controle-de-pedidos"
version = "0.1.0"
description = "app para gerenciar produção de pedidos simples"
authors = ["Ruan Gustavo Moretti <ruan.gustavo.moretti10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pyside6 = "^6.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
